--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   fluttertoast: ^6.0.1
   flutter_swiper: ^1.1.6
   dashed_circle: ^0.0.1
+  http: ^0.12.2
   intl: ^0.16.0
 dev_dependencies:
   flutter_test:
