--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^0.12.2
   intl: ^0.16.0
   xml2json: any
+  loading: ^1.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
