--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   intl: ^0.16.0
   xml2json: any
   loading: ^1.0.2
+  animated_overflow: ^1.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
