--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,8 @@ dependencies:
   http: ^0.12.2
   intl: ^0.16.0
   xml2json: any
-  loading: ^1.0.2
   animated_overflow: ^1.0.1
+  loading_indicator: ^1.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
